--- a/src/components/base-layout/index.css
+++ b/src/components/base-layout/index.css
@@ -379,7 +379,7 @@ td {
 .iframe-wrapper {
   overflow: hidden;
   width: 100%;
-  height: auto;
+  height: 955px;
   padding: 0;
   aspect-ratio: 16 / 9;
   border-radius: 8px;
